recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:4: error: reassignment to val
    count=count + 1;
         ^